--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
